<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">triviaDeClase</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="respuesta1">Respuesta 1</string>
    <string name="respuesta2">Respuesta 2</string>
    <string name="respuesta3">Respuesta 3</string>
    <string name="respuesta4">Respuesta 4</string>
    <string name="numPartida">Partida número:</string>
    <string name="pregunta">Pregunta aquí</string>
    <string name="nuevaPartida">Nueva Partida</string>

</resources>
